--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,11 @@
   <meta name="author" content="Kevin McCraney">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
-
 <!--CSS-->
-<link rel="stylesheet" href="css/leaflet.css" />
-<link rel="stylesheet" href="css/style.css" />
+<!--<link rel="stylesheet" href="css/leaflet.css" />
+<link rel="stylesheet" href="css/style.css" />-->
+ <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/style.css') }}">
 </head>
 
 <body>
@@ -24,7 +25,8 @@
 
 
   <!-- Load JS files -->
-  <script src='js/leaflet.js'></script>
-  <script src="js/main.js"></script>
+  <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+ <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+  <script src="{{ url_for('static',filename='js/main.js') }}"></script>
 </body>
 </html>
